Navbar fix collapse

--- a/RateSite/App_Themes/ContinUI/ContinUI.css
+++ b/RateSite/App_Themes/ContinUI/ContinUI.css
@@ -86,6 +86,6 @@
 }
 
 .navbar{
-    background-color: blue;
-    color: white;
+    /*background-color: blue;
+    color: white;*/
 }
